# learn-physics-with-fp

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  flake.nix  learn-physics-with-fp.cabal
app/: listing_17_1.hs  listing_20_2.hs  listing_20_3.hs  listing_20_4.hs
old/: ch12.hs  ch3.hs  ch4.hs  ch5.hs  ch6.hs  ch9.hs  first.hs
src/: Charge.hs  CoordinateSystems.hs  Electricity.hs  Geometry.hs  MOExamples.hs  Mechanics1D.hs  Mechanics3D.hs  MultipleObjects.hs  Newton2.hs  SimpleVec.hs
