cabal-version: 3.0
name:          learn-physics-with-fp
version:       0.1.0.0
author:        Fischer Bordwell
maintainer:    fbordwel@purdue.edu

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    CoordinateSystems
    Electricity
    Geometry
    Mechanics1D
    Mechanics3D
    MOExamples
    MultipleObjects
    Newton2
    SimpleVec

  build-depends:
    , base            >=4.16.4.0 && <5
    , diagrams-cairo
    , diagrams-lib
    , gloss
    , gnuplot         ^>=0.5.7
    , mtl             ^>=2.2.2
    , not-gloss
    , spatial-math

  hs-source-dirs:   src
  default-language: Haskell2010

executable main
  main-is:          Main.hs
  build-depends:
    , base     >=4.16.4.0 && <5
    , gnuplot  ^>=0.5.7

  hs-source-dirs:   app
  default-language: Haskell2010

executable listing_17_1
  main-is:          listing_17_1.hs
  build-depends:
    , base                   >=4.16.4.0 && <5
    , gloss
    , gnuplot                ^>=0.5.7
    , learn-physics-with-fp

  hs-source-dirs:   app
  default-language: Haskell2010

executable listing_20_2
  main-is:          listing_20_2.hs
  build-depends:
    , base                   >=4.16.4.0 && <5
    , gloss
    , gnuplot                ^>=0.5.7
    , learn-physics-with-fp
    , not-gloss

  hs-source-dirs:   app
  default-language: Haskell2010

executable listing_20_3
  main-is:          listing_20_3.hs
  build-depends:
    , base                   >=4.16.4.0 && <5
    , gloss
    , gnuplot                ^>=0.5.7
    , learn-physics-with-fp
    , not-gloss

  hs-source-dirs:   app
  default-language: Haskell2010

executable listing_20_4
  main-is:          listing_20_4.hs
  build-depends:
    , base                   >=4.16.4.0 && <5
    , gloss
    , gnuplot                ^>=0.5.7
    , learn-physics-with-fp
    , not-gloss

  hs-source-dirs:   app
  default-language: Haskell2010
